Update profiles list template to include query parameters for adding profiles
- Modified the profiles list HTML to pass query parameters for the 'add' action when navigating to the profile component.
- Enhanced routing capabilities for better user experience in profile management.

--- a/Angular/ProfileManager/src/app/components/profiles-list/profiles-list.html
+++ b/Angular/ProfileManager/src/app/components/profiles-list/profiles-list.html
@@ -12,6 +12,7 @@
       mat-raised-button
       color="primary"
       routerLink="/profile"
+      [queryParams]="{ action: 'add' }"
       class="w-full sm:w-auto bg-teal-600 hover:bg-teal-700"
     >
       <mat-icon class="mr-2">person_add</mat-icon>
