--- a/Angular/ProfileManager/src/app/components/add-profile/add-profile.html
+++ b/Angular/ProfileManager/src/app/components/add-profile/add-profile.html
@@ -102,7 +102,7 @@
           <mat-form-field appearance="fill" class="half-width">
             <mat-label>State</mat-label>
             <mat-select
-              (selectionChange)="onStateChange($event)"
+              (selectionChange)="onStateChange()"
               formControlName="state"
               placeholder="Select state"
             >
