--- a/Angular/ProfileManager/src/app/components/profiles-list/profiles-list.html
+++ b/Angular/ProfileManager/src/app/components/profiles-list/profiles-list.html
@@ -143,7 +143,7 @@
             <th mat-header-cell *matHeaderCellDef class="font-semibold text-gray-700">
               Zodiac Sign
             </th>
-            <td mat-cell *matCellDef="let profile">{{ profile.zodiacSign }}</td>
+            <td mat-cell *matCellDef="let profile">{{ profile.zodiacSign | titlecase }}</td>
           </ng-container>
 
           <!-- City Column -->
@@ -255,7 +255,7 @@
           <div class="space-y-2 text-sm text-gray-600 mb-4">
             <div class="flex">
               <span class="font-medium w-32">Zodiac Sign:</span>
-              <span>{{ profile.zodiacSign }}</span>
+              <span>{{ profile.zodiacSign | titlecase }}</span>
             </div>
             <div class="flex">
               <span class="font-medium w-32">City:</span>
