fix: correct mobile number formatting in WhatsApp link by removing country code prefix

--- a/Angular/ProfileManager/src/app/components/add-profile/add-profile.html
+++ b/Angular/ProfileManager/src/app/components/add-profile/add-profile.html
@@ -9,7 +9,7 @@
         @if (action() !== 'add') {
           <a
             target="_blank"
-            href="https://wa.me/{{ profileForm.value.mobileNumber?.replace('+91', '') }}"
+            href="https://wa.me/{{ profileForm.value.mobileNumber?.replace('+', '') }}"
           >
             <mat-icon>chat_add_on</mat-icon>
           </a>
