--- a/Angular/ProfileManager/src/app/components/profiles-list/profiles-list.html
+++ b/Angular/ProfileManager/src/app/components/profiles-list/profiles-list.html
@@ -162,7 +162,7 @@
                 class="px-3 py-1 rounded-full text-xs font-medium"
                 [ngClass]="getStatusClass(profile.profileStatusId)"
               >
-                {{ profile.profileStatusId }}
+                {{ profile.profileStatus }}
               </span>
             </td>
           </ng-container>
