feat: add mobile number copy functionality with tooltip feedback in profile manager

--- a/Angular/ProfileManager/src/app/components/add-profile/add-profile.html
+++ b/Angular/ProfileManager/src/app/components/add-profile/add-profile.html
@@ -16,6 +16,9 @@
           <a target="_blank" href="tel:{{ profileForm.value.mobileNumber }}">
             <mat-icon>call</mat-icon>
           </a>
+          <button mat-icon-button (click)="copyMobileNumber()" [matTooltip]="copyTooltip()">
+            <mat-icon>{{ copyIcon() }}</mat-icon>
+          </button>
         }
       </mat-card-header>
     </div>
