--- a/Angular/ProfileManager/src/app/components/add-profile/add-profile.html
+++ b/Angular/ProfileManager/src/app/components/add-profile/add-profile.html
@@ -16,9 +16,6 @@
           <a target="_blank" href="tel:{{ profileForm.value.mobileNumber }}">
             <mat-icon>call</mat-icon>
           </a>
-          <button mat-icon-button (click)="copyMobileNumber()" [matTooltip]="copyTooltip()">
-            <mat-icon>{{ copyIcon() }}</mat-icon>
-          </button>
         }
       </mat-card-header>
     </div>
@@ -55,6 +52,17 @@
           <mat-form-field appearance="fill" class="full-width">
             <mat-label>Mobile Number</mat-label>
             <input matInput placeholder="+91XXXXXXXXXX" formControlName="mobileNumber" />
+            @if (action() === 'view') {
+              <button
+                mat-icon-button
+                matSuffix
+                type="button"
+                (click)="copyField('mobileNumber', profileForm.value.mobileNumber, 'Mobile number')"
+                [matTooltip]="getCopyTooltip('mobileNumber')"
+              >
+                <mat-icon>{{ getCopyIcon('mobileNumber') }}</mat-icon>
+              </button>
+            }
             @if (
               profileForm.controls.mobileNumber.invalid && profileForm.controls.mobileNumber.touched
             ) {
@@ -66,6 +74,17 @@
           <mat-form-field appearance="fill" class="full-width">
             <mat-label>Matrimony ID</mat-label>
             <input matInput placeholder="Matrimony Site Profile ID" formControlName="matrimonyId" />
+            @if (action() === 'view') {
+              <button
+                mat-icon-button
+                matSuffix
+                type="button"
+                (click)="copyField('matrimonyId', profileForm.value.matrimonyId, 'Matrimony ID')"
+                [matTooltip]="getCopyTooltip('matrimonyId')"
+              >
+                <mat-icon>{{ getCopyIcon('matrimonyId') }}</mat-icon>
+              </button>
+            }
             @if (
               profileForm.controls.matrimonyId.invalid && profileForm.controls.matrimonyId.touched
             ) {
