--- a/Angular/ProfileManager/src/app/components/add-profile-signal-form/add-profile-signal-form.html
+++ b/Angular/ProfileManager/src/app/components/add-profile-signal-form/add-profile-signal-form.html
@@ -5,6 +5,7 @@
       <span class="text-base text-gray-500 font-medium">Loading profile...</span>
     </div>
   } @else {
+    @let mobileNumber = profileDetailForm.mobileNumber().value();
     <mat-card class="mx-auto shadow-md rounded-lg">
       <div class="flex items-center">
         <button mat-icon-button (click)="onCancel()">
@@ -15,7 +16,6 @@
             title()
           }}</mat-card-title>
           @if (action() !== 'add') {
-            @let mobileNumber = profileDetailForm.mobileNumber().value();
             <a target="_blank" href="https://wa.me/{{ mobileNumber?.replace('+', '') }}">
               <mat-icon>chat_add_on</mat-icon>
             </a>
@@ -64,20 +64,18 @@
                 placeholder="+91XXXXXXXXXX"
                 [formField]="profileDetailForm.mobileNumber"
               />
-              <!-- @if (action() === 'view') {
+              @if (action() === 'view') {
                 <button
                   mat-icon-button
                   matSuffix
                   type="button"
-                  (click)="
-                    copyField('mobileNumber', profileDetailForm.value.mobileNumber, 'Mobile number')
-                  "
+                  (click)="copyField('mobileNumber', mobileNumber, 'Mobile number')"
                   [matTooltip]="getCopyTooltip('mobileNumber')"
                 >
                   <mat-icon>{{ getCopyIcon('mobileNumber') }}</mat-icon>
                 </button>
               }
-                 -->
+
               @if (
                 profileDetailForm.mobileNumber().errors().length > 0 &&
                 profileDetailForm.mobileNumber().touched()
@@ -95,17 +93,23 @@
                 placeholder="Matrimony Site Profile ID"
                 [formField]="profileDetailForm.matrimonyId"
               />
-              <!-- @if (action() === 'view') {
+              @if (action() === 'view') {
                 <button
                   mat-icon-button
                   matSuffix
                   type="button"
-                  (click)="copyField('matrimonyId', profileForm.value.matrimonyId, 'Matrimony ID')"
+                  (click)="
+                    copyField(
+                      'matrimonyId',
+                      profileDetailForm.matrimonyId().value(),
+                      'Matrimony ID'
+                    )
+                  "
                   [matTooltip]="getCopyTooltip('matrimonyId')"
                 >
                   <mat-icon>{{ getCopyIcon('matrimonyId') }}</mat-icon>
                 </button>
-              } -->
+              }
               @if (
                 profileDetailForm.matrimonyId().errors().length > 0 &&
                 profileDetailForm.matrimonyId().touched()
